# apcore-rust

./: .code-forge.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml
.github/workflows/: ci.yml
examples/: README.md  cancel_token.rs  decorated_add.rs  get_user.rs  global_client.rs  greet.rs  pipeline_demo.rs  send_email.rs  simple_client.rs
examples/bindings/: format_date.binding.yaml  format_date.rs
planning/v022-hardening/: plan.md
src/: acl.rs  acl_handlers.rs  approval.rs  async_task.rs  bindings.rs  builtin_steps.rs  cancel.rs  client.rs  config.rs  context.rs  context_key.rs  context_keys.rs  decorator.rs  error_formatter.rs  errors.rs  executor.rs  extensions.rs  lib.rs  module.rs  pipeline.rs  pipeline_config.rs  sys_modules.rs  trace_context.rs  version.rs
src/events/: circuit_breaker.rs  emitter.rs  mod.rs  retry.rs  subscribers.rs
src/middleware/: adapters.rs  base.rs  circuit_breaker.rs  context_namespace.rs  logging.rs  manager.rs  mod.rs  otel_tracing.rs  retry.rs  yaml_config.rs
src/observability/: error_history.rs  exporters.rs  logging.rs  metrics.rs  mod.rs  processor.rs  prometheus_exporter.rs  redaction.rs  span.rs  storage.rs  store.rs  tracing_middleware.rs  usage.rs  usage_exporter.rs
src/registry/: conflicts.rs  default_discoverer.rs  dependencies.rs  entry_point.rs  metadata.rs  mod.rs  multi_class.rs  registry.rs  scanner.rs  types.rs  validation.rs  version.rs
src/schema/: exporter.rs  hardening.rs  loader.rs  mod.rs  ref_resolver.rs  resolver.rs  strict.rs  validator.rs
src/sys_modules/: audit.rs  control.rs  health.rs  manifest.rs  mod.rs  overrides.rs  usage.rs
src/utils/: error_propagation.rs  helpers.rs  mod.rs
tests/: config_bus.rs  config_discovery.rs  conformance_high_drift.rs  conformance_test.rs  context_serialization_test.rs  error_formatter_registry.rs  identity_immutable_test.rs  integration_test.rs  sys_modules_control.rs  test_acl.rs  test_acl_conditions.rs  test_acl_handler_error_conformance.rs  test_acl_panic_boundary.rs  test_acl_sync_handler_error.rs  test_approval.rs  test_async_task.rs  test_async_task_cancellation_conformance.rs  test_async_task_evolution_conformance.rs  test_async_task_hardening.rs  test_bindings.rs  test_builtin_steps.rs  test_call_chain_guard.rs  test_cancel.rs  test_chunk_shape.rs  test_client.rs  test_compute_delay_ms.rs  test_config_key_restricted.rs  test_config_reload_from_disk.rs  test_context.rs  test_context_key.rs  test_context_key_promotion.rs  test_context_keys.rs  test_context_logger_schema.rs  test_crate_root_exports.rs  test_decorator.rs  test_error_fingerprinting.rs  test_error_history_heap.rs  test_error_serialization_conformance.rs  test_errors.rs  test_event_delivery_conformance.rs  (+53 more)
tests/compile_fail/: identity_immutable.rs  identity_immutable.stderr
tests/conformance/: mod.rs
