[package]
name = "apcore"
version = "0.18.1"
edition = "2021"
description = "Schema-driven module standard for AI-perceivable interfaces"
license = "Apache-2.0"
readme = "README.md"
authors = ["aiperceivable <tercel.yi@gmail.com>"]
homepage = "https://aiperceivable.com"
repository = "https://github.com/aiperceivable/apcore-rust"
documentation = "https://apcore.aiperceivable.com/"
keywords = ["ai", "llm", "module", "middleware", "schema"]
categories = [
    "api-bindings",
    "asynchronous",
    "development-tools",
    "web-programming",
    "config",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
regex = "1"
jsonschema = "0.28"
reqwest = { version = "0.12", features = ["json"], optional = true }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
parking_lot = "0.12"
schemars = "0.8"

[features]
default = []
events = ["reqwest"]

[dev-dependencies]
tempfile = "3"
trybuild = "1"
pretty_assertions = "1"
tokio-test = "0.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
